--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-.content{
+#container{
+    width: 99%;
     margin: auto;
 }
 
@@ -6,9 +7,13 @@ body{
     margin: 0;
 }
 
+.imag{
+    width: 700px;
+    height: auto;
+}
+
 nav{
     width: 100%;
     height: 120px;
     background-color: rgb(94, 177, 255);
-    margin: 0;
 }
