--- a/style.css
+++ b/style.css
@@ -1,19 +1,32 @@
+/*Body Section*/
+body{
+    margin: 0;
+}
+
 #container{
     width: 99%;
     margin: auto;
 }
 
-body{
-    margin: 0;
+/*Nav Section*/
+nav{
+    width: 100%;
+    height: 120px;
+    background-color: rgb(94, 177, 255);
+    background-image:url(./img/pattern.png);
+    background-size: contain;
 }
 
+#logo{
+    width: 250px;
+    height: auto;
+    margin-top: 50px;
+    margin-left: 20px;
+}
+
+/*Header Section*/
 .imag{
     width: 700px;
     height: auto;
 }
 
-nav{
-    width: 100%;
-    height: 120px;
-    background-color: rgb(94, 177, 255);
-}
