--- a/style.css
+++ b/style.css
@@ -54,6 +54,25 @@ main{
     font-size: 25px;
 }
 
-/*Immages Section*/
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    size: 100%;
+
+  }
+
+.first_cell{
+    width: 20%;
+    padding: 0;
+}
+
+.second_cell{
+    text-align: center;
+}
+
+.third_cell{
+    width: 50%;
+    padding left: 0;
+}
 
 
