--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ main{
 }
 
 table, th, td {
-    border: 1px solid black;
+    border: 1px solid transparent;
     border-collapse: collapse;
     size: 100%;
 
@@ -72,7 +72,22 @@ table, th, td {
 
 .third_cell{
     width: 50%;
-    padding left: 0;
+}
+
+#firstLorem{
+    padding: 0;
+}
+
+#blue{
+    background-color: rgb(46, 172, 255);
+}
+
+.light-blue{
+    background-color: rgb(141, 232, 255);
+}
+
+#white-blue{
+    background-color: rgb(205, 245, 255)
 }
 
 
