--- a/style.css
+++ b/style.css
@@ -5,18 +5,19 @@ body{
 }
 
 #container{
-    width: 99%;
+    width: 55%;
     margin: auto;
     margin-bottom: 50px;
 }
 
 /*Nav Section*/
 nav{
+    padding: 0 10px;
     width: 100%;
     height: 120px;
     background-color: rgb(94, 177, 255);
     background-image:url(./img/pattern.png);
-    background-size: contain;
+    background-size: 40%;
 }
 
 #logo{
@@ -33,12 +34,12 @@ header{
 }
 
 .imag{
-    width: 700px;
+    width: 500px;
     height: auto;
 }
 
 h1{
-    font-size: 50px;
+    font-size: 45px;
     margin-bottom: 0;
 }
 
@@ -46,18 +47,28 @@ h1{
     color: rgb(8, 202, 250) ;
 }
 
-.subtitles{
+#subtitles{
     font-size: 16px;
+    color: grey;
+}
+
+.sub{
+    font-size: 13px;
 }
 
 /*Main Section*/
 
 main{
-    font-size: 25px;
+    font-size: 20px;
+}
+
+p{
+    margin: 30 0px;
 }
 
 ul{
-    margin: 50px 0px;
+    margin: 0;
+    padding-left: 20px;
 }
 
 table, th, td {
@@ -67,29 +78,14 @@ table, th, td {
     margin: 50px 0px
   }
 
-.first_cell{
-    width: 20%;
-    padding: 0;
+thead{
     text-align: left;
-}
-
-.second_cell{
-    text-align: center;
-}
-
-.third_cell{
-    width: 50%;
-    text-align: left;
-}
-
-#firstLorem{
-    padding: 0;
-    text-align: left;
-}
-
-#blue{
-    background-color: rgb(46, 172, 255);
     color: white;
+    background-color: rgb(46, 172, 255); ;
+}
+
+.half-width{
+    width: 50%;
 }
 
 .light-blue{
